# basic_00_rna

./: .gitignore  Makefile  README.md  best_model.h5  environment.yml  pyproject.toml
ai_workflow_engine/: __init__.py  dataset.py  features.py  get_model.py  pipeline.py  plots.py
ai_workflow_engine/experiments/: mlflow_utils.py
ai_workflow_engine/modeling/: evaluator.py  hyperparam_optimization.py  predict.py  train.py  trainer.py
clustering_workflow_engine/: __init__.py  config.py  dataset.py  features.py  pipeline.py  plots.py
clustering_workflow_engine/experiments/: mlflow_utils.py
clustering_workflow_engine/modeling/: evaluator.py  hyperparam_optimization.py  predict.py  train.py  trainer.py
docs/: mkdocs.yml
docs/docs/: index.md
models/: iris_model.pth  mlp_model_iris.pth
notebooks/mlartifacts/0/5da47c2b8a704b299e55eea4cba42b40/artifacts/: mlp_model_iris.pth
notebooks/mlartifacts/0/b4573eda3fcd4a87871a6a52e061989f/artifacts/datasets/: tmp_nohe1ov.csv
notebooks/mlartifacts/138378272183607000/0aafbbe0dd1e496ba7aad28dde2ebf71/artifacts/: X_sample.csv  y_sample.csv
notebooks/mlartifacts/836603004926437322/d0876b1acfc6472ea72370d330a2eb12/artifacts/: iris_MLP_Model.pkl.b64
reports/: iris_MLP_final.pth  iris_mlp_final.pt  wine_mlp_final.pt
rna_workflow_engine/: __init__.py  config.py  dataset.py  features.py  get_model.py  pipeline.py  plots.py  utils.py
rna_workflow_engine/experiments/: mlflow_utils.py
rna_workflow_engine/modeling/: evaluator.py  hyperparam_optimization.py  predict.py  train.py  trainer.py
(+180 files in other folders)
