[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "clustering_workflow_engine"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Your name (or your organization/company/team)" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "==3.11.13"


[tool.ruff]
line-length = 99
src = ["ai_workflow_engine"]
include = ["pyproject.toml", "ai_workflow_engine/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["ai_workflow_engine"]
force-sort-within-sections = true

